refactor: separar entidades JPA de modelos de dominio, crear entities en adapters/out/persistence/entities, agregar entity mappers para Medicamento y Gestor, actualizar repositorios impl para usar entity mappers y limpiar modelos de dominio de anotaciones Jakarta.